fix center alignment

--- a/static/style.css
+++ b/static/style.css
@@ -46,6 +46,7 @@ body::-webkit-scrollbar {
     padding: 10px;
     text-shadow: 1px 1px black;
     cursor: pointer;
+    text-align: center;
 }
 
 #menu a {
